added code for column sizing. created framework for text input and save buttons

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -29,134 +29,117 @@
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
     </header>
+
     <container id ="hasAllContainer">
       <container class="row" id="7clock">
-        <div class="spacer"></div>
-          <div class="7hour">07:00AM</div>
-            <textarea class="7amtext"></textarea>
-            <button class="savetextBtn ">
-            ::before
+        <div class="col-1"></div>
+          <div class="hour w-25 p-4 col-1">07:00AM</div>
+            <textarea class="7am description w-50 p-4 col-8 past present future"></textarea>
+            <button class="savetextBtn w-25 col-1">
+            SAVE
             </button>
-        <div class="spacer"></div>    
+        <div class="col-1"></div>    
       </container>
       <container class="row" id="8clock">
-        <div class="spacer"></div>
-          <div class="8hour">08:00AM</div>
-            <textarea class="8amtext"></textarea>
-            <button class="savetextBtn ">
-            ::before
+        <div class="col-1"></div>
+          <div class="hour w-25 p-4 col-1">08:00AM</div>
+            <textarea class="8am description w-50 p-4 col-8 past present future"></textarea>
+            <button class="savetextBtn w-25 col-1">
+            SAVE
             </button>
-        <div class="spacer"></div>    
+        <div class="col-1"></div>    
       </container>
       <container class="row" id="9clock">
-        <div class="spacer"></div>
-          <div class="9hour">09:00AM</div>
-            <textarea class="9amtext"></textarea>
-            <button class="savetextBtn ">
-            ::before
+        <div class="col-1"></div>
+          <div class="hour w-25 p-4 col-1">09:00AM</div>
+            <textarea class="9am description w-50 p-4 col-8 past present future"></textarea>
+            <button class="savetextBtn w-25 col-1">
+            SAVE
             </button>
-        <div class="spacer"></div>    
+        <div class="col-1"></div>    
       </container>
       <container class="row" id="10clock">
-        <div class="spacer"></div>
-          <div class="10hour">10:00AM</div>
-            <textarea class="10amtext"></textarea>
-            <button class="savetextBtn ">
-            ::before
+        <div class="col-1"></div>
+          <div class="hour w-25 p-4 col-1">10:00AM</div>
+            <textarea class="10am description w-50 p-4 col-8 past present future"></textarea>
+            <button class="savetextBtn w-25 col-1">
+            SAVE
             </button>
-        <div class="spacer"></div>    
+        <div class="col-1"></div>    
       </container>
       <container class="row" id="11clock">
-        <div class="spacer"></div>
-          <div class="1hour">11:00AM</div>
-            <textarea class="11amtext"></textarea>
-            <button class="savetextBtn ">
-            ::before
+        <div class="col-1"></div>
+          <div class="hour w-25 p-4 col-1">11:00AM</div>
+            <textarea class="11am description w-50 p-4 col-8 past present future"></textarea>
+            <button class="savetextBtn w-25 col-1">
+            SAVE
             </button>
-        <div class="spacer"></div>    
+        <div class="col-1"></div>    
       </container>
       <container class="row" id="12clock">
-        <div class="spacer"></div>
-          <div class="12hour">06:00AM</div>
-            <textarea class="12pmtext"></textarea>
-            <button class="savetextBtn ">
-            ::before
+        <div class="col-1"></div>
+          <div class="hour w-25 p-4 col-1">12:00PM</div>
+            <textarea class="12pm description w-50 p-4 col-8 past present future"></textarea>
+            <button class="savetextBtn w-24 col-1">
+            SAVE
             </button>
-        <div class="spacer"></div>    
+        <div class="col-1"></div>    
       </container>
       <container class="row" id="1clock">
-        <div class="spacer"></div>
-          <div class="1hour">01:00PM</div>
-            <textarea class="1pmtext"></textarea>
-            <button class="savetextBtn ">
-            ::before
+        <div class="col-1"></div>
+          <div class="hour w-25 p-4 col-1">01:00PM</div>
+            <textarea class="1pm description w-50 p-4 col-8 past present future"></textarea>
+            <button class="savetextBtn w-25 col-1">
+            SAVE
             </button>
-        <div class="spacer"></div>    
+        <div class="col-1"></div>    
       </container>
       <container class="row" id="2clock">
-        <div class="spacer"></div>
-          <div class="2hour">02:00PM</div>
-            <textarea class="2pmtext"></textarea>
-            <button class="savetextBtn ">
-            ::before
+        <div class="col-1"></div>
+          <div class="hour w-25 p-4 col-1">02:00PM</div>
+            <textarea class="2pm description w-50 p-4 col-8 past present future"></textarea>
+            <button class="savetextBtn w-25 col-1">
+            SAVE
             </button>
-        <div class="spacer"></div>    
+        <div class="col-1"></div>    
       </container>
       <container class="row" id="3clock">
-        <div class="spacer"></div>
-          <div class="3hour">03:00PM</div>
-            <textarea class="3pmtext"></textarea>
-            <button class="savetextBtn ">
-            ::before
+        <div class="col-1"></div>
+          <div class="hour w-25 p-4 col-1">03:00PM</div>
+            <textarea class="3pm description w-50 p-4 col-8 past present future"></textarea>
+            <button class="savetextBtn w-25 col-1">
+            SAVE
             </button>
-        <div class="spacer"></div>    
+        <div class="col-1"></div>    
       </container>
       <container class="row" id="4clock">
-        <div class="spacer"></div>
-          <div class="4hour">04:00PM</div>
-            <textarea class="4pmtext"></textarea>
-            <button class="savetextBtn ">
-            ::before
+        <div class="col-1"></div>
+          <div class="hour w-25 p-4 col-1">04:00PM</div>
+            <textarea class="4pm description w-50 p-4 col-8 past present future"></textarea>
+            <button class="savetextBtn w-25 col-1">
+            SAVE
             </button>
-        <div class="spacer"></div>    
+        <div class="col-1"></div>    
       </container>
       <container class="row" id="5clock">
-        <div class="spacer"></div>
-          <div class="5hour">05:00PM</div>
-            <textarea class="5pmtext"></textarea>
-            <button class="savetextBtn ">
-            ::before
+        <div class="col-1"></div>
+          <div class="hour w-25 p-4 col-1">05:00PM</div>
+            <textarea class="5pm description w-50 p-4 col-8 past present future"></textarea>
+            <button class="savetextBtn w-25 col-1">
+            SAVE
             </button>
-        <div class="spacer"></div>    
+        <div class="col-1"></div>    
       </container>
       <container class="row" id="6clock">
-        <div class="spacer"></div>
-          <div class="6hour">06:00AM</div>
-            <textarea class="7amtext"></textarea>
-            <button class="savetextBtn ">
-            ::before
+        <div class="col-1"></div>
+          <div class="hour w-25 p-4 col-1">06:00PM</div>
+            <textarea class="6pm description w-50 p-4 col-8 past present future"></textarea>
+            <button class="savetextBtn w-25 col-1">
+            SAVE
             </button>
-        <div class="spacer"></div>    
+        <div class="col-1"></div>    
       </container>
       <container class="row" id="7oclock">
-        <div class="spacer"></div>
-          <div class="7ohour">07:00PM</div>
-            <textarea class="7opmtext"></textarea>
-            <button class="savetextBtn ">
-            ::before
-            </button>
-        <div class="spacer"></div>    
-      </container>
-      <container class="row" id="8oclock">
-        <div class="spacer"></div>
-          <div class="8ohour">08:00pM</div>
-            <textarea class="8opmtext"></textarea>
-            <button class="savetextBtn ">
-            ::before
-            </button>
-        <div class="spacer"></div>    
-      </container>
-
 
 
 
@@ -166,6 +149,7 @@
     
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+
     <script src="script.js"></script>
   </body>
 </html>
