changing class names to match pregenerated CSS

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -31,115 +31,115 @@
     </header>
 
     <container id ="hasAllContainer">
-      <container class="row" id="7clock">
+      <container class="row" id="7">
         <div class="col-1"></div>
           <div class="hour w-25 p-4 col-1">07:00AM</div>
-            <textarea class="7am description w-50 p-4 col-8 past present future"></textarea>
+            <textarea class="description w-50 p-4 col-8 time-block"></textarea>
             <button class="savetextBtn w-25 col-1">
             SAVE
             </button>
         <div class="col-1"></div>    
       </container>
-      <container class="row" id="8clock">
+      <container class="row" id="8">
         <div class="col-1"></div>
           <div class="hour w-25 p-4 col-1">08:00AM</div>
-            <textarea class="8am description w-50 p-4 col-8 past present future"></textarea>
+            <textarea class="description w-50 p-4 col-8 time-block"></textarea>
             <button class="savetextBtn w-25 col-1">
             SAVE
             </button>
         <div class="col-1"></div>    
       </container>
-      <container class="row" id="9clock">
+      <container class="row" id="9">
         <div class="col-1"></div>
           <div class="hour w-25 p-4 col-1">09:00AM</div>
-            <textarea class="9am description w-50 p-4 col-8 past present future"></textarea>
+            <textarea class="description w-50 p-4 col-8 time-block"></textarea>
             <button class="savetextBtn w-25 col-1">
             SAVE
             </button>
         <div class="col-1"></div>    
       </container>
-      <container class="row" id="10clock">
+      <container class="row" id="10">
         <div class="col-1"></div>
           <div class="hour w-25 p-4 col-1">10:00AM</div>
-            <textarea class="10am description w-50 p-4 col-8 past present future"></textarea>
+            <textarea class="description w-50 p-4 col-8 time-block"></textarea>
             <button class="savetextBtn w-25 col-1">
             SAVE
             </button>
         <div class="col-1"></div>    
       </container>
-      <container class="row" id="11clock">
+      <container class="row" id="11">
         <div class="col-1"></div>
           <div class="hour w-25 p-4 col-1">11:00AM</div>
-            <textarea class="11am description w-50 p-4 col-8 past present future"></textarea>
+            <textarea class="description w-50 p-4 col-8 time-block"></textarea>
             <button class="savetextBtn w-25 col-1">
             SAVE
             </button>
         <div class="col-1"></div>    
       </container>
-      <container class="row" id="12clock">
+      <container class="row" id="12">
         <div class="col-1"></div>
           <div class="hour w-25 p-4 col-1">12:00PM</div>
-            <textarea class="12pm description w-50 p-4 col-8 past present future"></textarea>
+            <textarea class="description w-50 p-4 col-8 time-block"></textarea>
             <button class="savetextBtn w-24 col-1">
             SAVE
             </button>
         <div class="col-1"></div>    
       </container>
-      <container class="row" id="1clock">
+      <container class="row" id="13">
         <div class="col-1"></div>
           <div class="hour w-25 p-4 col-1">01:00PM</div>
-            <textarea class="1pm description w-50 p-4 col-8 past present future"></textarea>
+            <textarea class="description w-50 p-4 col-8 time-block"></textarea>
             <button class="savetextBtn w-25 col-1">
             SAVE
             </button>
         <div class="col-1"></div>    
       </container>
-      <container class="row" id="2clock">
+      <container class="row" id="14">
         <div class="col-1"></div>
           <div class="hour w-25 p-4 col-1">02:00PM</div>
-            <textarea class="2pm description w-50 p-4 col-8 past present future"></textarea>
+            <textarea class="description w-50 p-4 col-8 time-block"></textarea>
             <button class="savetextBtn w-25 col-1">
             SAVE
             </button>
         <div class="col-1"></div>    
       </container>
-      <container class="row" id="3clock">
+      <container class="row" id="15">
         <div class="col-1"></div>
           <div class="hour w-25 p-4 col-1">03:00PM</div>
-            <textarea class="3pm description w-50 p-4 col-8 past present future"></textarea>
+            <textarea class="description w-50 p-4 col-8 time-block"></textarea>
             <button class="savetextBtn w-25 col-1">
             SAVE
             </button>
         <div class="col-1"></div>    
       </container>
-      <container class="row" id="4clock">
+      <container class="row" id="16">
         <div class="col-1"></div>
           <div class="hour w-25 p-4 col-1">04:00PM</div>
-            <textarea class="4pm description w-50 p-4 col-8 past present future"></textarea>
+            <textarea class="description w-50 p-4 col-8 time-block"></textarea>
             <button class="savetextBtn w-25 col-1">
             SAVE
             </button>
         <div class="col-1"></div>    
       </container>
-      <container class="row" id="5clock">
+      <container class="row" id="17">
         <div class="col-1"></div>
           <div class="hour w-25 p-4 col-1">05:00PM</div>
-            <textarea class="5pm description w-50 p-4 col-8 past present future"></textarea>
+            <textarea class="description w-50 p-4 col-8 time-block"></textarea>
             <button class="savetextBtn w-25 col-1">
             SAVE
             </button>
         <div class="col-1"></div>    
       </container>
-      <container class="row" id="6clock">
+      <container class="row" id="18">
         <div class="col-1"></div>
           <div class="hour w-25 p-4 col-1">06:00PM</div>
-            <textarea class="6pm description w-50 p-4 col-8 past present future"></textarea>
+            <textarea class="description w-50 p-4 col-8 time-block"></textarea>
             <button class="savetextBtn w-25 col-1">
             SAVE
             </button>
         <div class="col-1"></div>    
       </container>
-      <container class="row" id="7oclock">
+      <container class="row" id="7-clock">
 
 
 
