got the color based on current time working

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -31,7 +31,7 @@
     </header>
 
     <container id ="hasAllContainer">
-      <container class="row" id="7">
+      <container class="row" id="7-clock">
         <div class="col-1"></div>
           <div class="hour w-25 p-4 col-1">07:00AM</div>
             <textarea class="description w-50 p-4 col-8 time-block"></textarea>
