renamed into corrent tag names.wrote function to pull from localstorage

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./Assets/CSS/style.css" />
     <title>Work Day Scheduler</title>
   </head>
 
@@ -30,127 +30,122 @@
       <p id="currentDay" class="lead"></p>
     </header>
 
-    <container id ="hasAllContainer">
-      <container class="row" id="7">
+    <div id ="hasAllContainer">
+      <div class="row" id="7">
         <div class="col-1"></div>
-          <div class="hour w-25 p-4 col-1">07:00AM</div>
-            <textarea class="description w-50 p-4 col-8 time-block"></textarea>
+          <div class="hour-7 w-25 p-4 col-1">07:00AM</div>
+            <textarea class="description w-50 p-4 col-8 time-block" id="ta7"></textarea>
             <button class="savetextBtn w-25 col-1">
             SAVE
             </button>
         <div class="col-1"></div>    
-      </container>
-      <container class="row" id="8">
+          </div>
+      <div class="row" id="8">
         <div class="col-1"></div>
-          <div class="hour w-25 p-4 col-1">08:00AM</div>
-            <textarea class="description w-50 p-4 col-8 time-block"></textarea>
+          <div class="hour-8 w-25 p-4 col-1">08:00AM</div>
+            <textarea class="description w-50 p-4 col-8 time-block" id="ta8"></textarea>
             <button class="savetextBtn w-25 col-1">
             SAVE
             </button>
         <div class="col-1"></div>    
-      </container>
-      <container class="row" id="9">
+          </div>
+      <div class="row" id="9">
         <div class="col-1"></div>
-          <div class="hour w-25 p-4 col-1">09:00AM</div>
-            <textarea class="description w-50 p-4 col-8 time-block"></textarea>
+          <div class="hour-9 w-25 p-4 col-1">09:00AM</div>
+            <textarea class="description w-50 p-4 col-8 time-block" id="ta9"></textarea>
             <button class="savetextBtn w-25 col-1">
             SAVE
             </button>
         <div class="col-1"></div>    
-      </container>
-      <container class="row" id="10">
+          </div>
+      <div class="row" id="10">
         <div class="col-1"></div>
-          <div class="hour w-25 p-4 col-1">10:00AM</div>
-            <textarea class="description w-50 p-4 col-8 time-block"></textarea>
+          <div class="hour-10 w-25 p-4 col-1">10:00AM</div>
+            <textarea class="description w-50 p-4 col-8 time-block" id="ta10"></textarea>
             <button class="savetextBtn w-25 col-1">
             SAVE
             </button>
         <div class="col-1"></div>    
-      </container>
-      <container class="row" id="11">
+          </div>
+      <div class="row" id="11">
         <div class="col-1"></div>
-          <div class="hour w-25 p-4 col-1">11:00AM</div>
-            <textarea class="description w-50 p-4 col-8 time-block"></textarea>
+          <div class="hour-11 w-25 p-4 col-1">11:00AM</div>
+            <textarea class="description w-50 p-4 col-8 time-block" id="ta11"></textarea>
             <button class="savetextBtn w-25 col-1">
             SAVE
             </button>
         <div class="col-1"></div>    
-      </container>
-      <container class="row" id="12">
+          </div>
+      <div class="row" id="12">
         <div class="col-1"></div>
-          <div class="hour w-25 p-4 col-1">12:00PM</div>
-            <textarea class="description w-50 p-4 col-8 time-block"></textarea>
+          <div class="hour-13 w-25 p-4 col-1">12:00PM</div>
+            <textarea class="description w-50 p-4 col-8 time-block" id="ta12"></textarea>
             <button class="savetextBtn w-24 col-1">
             SAVE
             </button>
         <div class="col-1"></div>    
-      </container>
-      <container class="row" id="13">
+          </div>
+      <div class="row" id="13">
         <div class="col-1"></div>
-          <div class="hour w-25 p-4 col-1">01:00PM</div>
-            <textarea class="description w-50 p-4 col-8 time-block"></textarea>
+          <div class="hour-14 w-25 p-4 col-1">01:00PM</div>
+            <textarea class="description w-50 p-4 col-8 time-block" id="ta13"></textarea>
             <button class="savetextBtn w-25 col-1">
             SAVE
             </button>
         <div class="col-1"></div>    
-      </container>
-      <container class="row" id="14">
+          </div>
+      <div class="row" id="14">
         <div class="col-1"></div>
-          <div class="hour w-25 p-4 col-1">02:00PM</div>
-            <textarea class="description w-50 p-4 col-8 time-block"></textarea>
+          <div class="hour-15 w-25 p-4 col-1">02:00PM</div>
+            <textarea class="description w-50 p-4 col-8 time-block" id="ta14"></textarea>
             <button class="savetextBtn w-25 col-1">
             SAVE
             </button>
         <div class="col-1"></div>    
-      </container>
-      <container class="row" id="15">
+          </div>
+      <div class="row" id="15">
         <div class="col-1"></div>
-          <div class="hour w-25 p-4 col-1">03:00PM</div>
-            <textarea class="description w-50 p-4 col-8 time-block"></textarea>
+          <div class="hour-16 w-25 p-4 col-1">03:00PM</div>
+            <textarea class="description w-50 p-4 col-8 time-block" id="ta15"></textarea>
             <button class="savetextBtn w-25 col-1">
             SAVE
             </button>
         <div class="col-1"></div>    
-      </container>
-      <container class="row" id="16">
+          </div>
+      <div class="row" id="16">
         <div class="col-1"></div>
-          <div class="hour w-25 p-4 col-1">04:00PM</div>
-            <textarea class="description w-50 p-4 col-8 time-block"></textarea>
+          <div class="hour-17 w-25 p-4 col-1">04:00PM</div>
+            <textarea class="description w-50 p-4 col-8 time-block" id="ta16"></textarea>
             <button class="savetextBtn w-25 col-1">
             SAVE
             </button>
         <div class="col-1"></div>    
-      </container>
-      <container class="row" id="17">
+          </div>
+      <div class="row" id="17">
         <div class="col-1"></div>
-          <div class="hour w-25 p-4 col-1">05:00PM</div>
-            <textarea class="description w-50 p-4 col-8 time-block"></textarea>
+          <div class="hour-18 w-25 p-4 col-1">05:00PM</div>
+            <textarea class="description w-50 p-4 col-8 time-block" id="ta17"></textarea>
             <button class="savetextBtn w-25 col-1">
             SAVE
             </button>
         <div class="col-1"></div>    
-      </container>
-      <container class="row" id="18">
+          </div>
+      <div class="row" id="18">
         <div class="col-1"></div>
-          <div class="hour w-25 p-4 col-1">06:00PM</div>
-            <textarea class="description w-50 p-4 col-8 time-block"></textarea>
+          <div class="hour-19 w-25 p-4 col-1">06:00PM</div>
+            <textarea class="description w-50 p-4 col-8 time-block" id="ta18"></textarea>
             <button class="savetextBtn w-25 col-1">
             SAVE
             </button>
         <div class="col-1"></div>    
-      </container>
-      <container class="row" id="7-clock">
-
-
-
-
-    </container>
+          </div>
+        </div>
 
     
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
 
-    <script src="script.js"></script>
+    <script src="./Assets/JS/script.js"></script>
   </body>
 </html>
 
